including two samples from bangladesh in pop gen

--- a/400-additional-data.Rmd
+++ b/400-additional-data.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message=FALSE)
 ```{r}
 library(tidyverse)
 library(ggtree)
+library(phytools)
 library(ggrepel)
 ```
 
@@ -185,7 +186,95 @@ PlotAdmix("outputs/400/60-K3.qopt", meta)
 PlotAdmix("outputs/400/60-K4.qopt", meta)
 ```
 
+##Generate MTDNA
+SRR26402930 
+
+SRR26358744
+```{sh, eval=FALSE}
+samtools view -b data/split/SRR26402930.sort.flt.bam NC_007439.1 > data/mtdna/SRR26402930-mtdna.bam
+samtools index data/mtdna/SRR26402930-mtdna.bam
+
+srun -p high --nodes=1 --mem=32G -t 00:30:00 /home/maccamp/proovread/bin/bam2cns --bam data/mtdna/SRR26402930-mtdna.bam --ref genome/NC_007439.1.fasta --prefix data/mtdna/SRR26402930-mtdna
+
+ ~/seqtk/seqtk seq -a -q20 -n N data/mtdna/SRR26402930-mtdna.fq > data/mtdna/SRR26402930-mtdna-q20.fasta
+samtools faidx data/mtdna/SRR26402930-mtdna-q20.fasta NC_007439.1:6329-7879 > data/mtdna/SRR26402930-coi.fasta
+
+
+samtools view -b data/split/SRR26358744.sort.flt.bam NC_007439.1 > data/mtdna/SRR26358744-mtdna.bam
+samtools index data/mtdna/SRR26358744-mtdna.bam
+
+srun -p high --nodes=1 --mem=32G -t 00:30:00 /home/maccamp/proovread/bin/bam2cns --bam data/mtdna/SRR26358744-mtdna.bam --ref genome/NC_007439.1.fasta --prefix data/mtdna/SRR26358744-mtdna
+
+ ~/seqtk/seqtk seq -a -q20 -n N data/mtdna/SRR26358744-mtdna.fq > data/mtdna/SRR26358744-mtdna-q20.fasta
+samtools faidx data/mtdna/SRR26358744-mtdna-q20.fasta NC_007439.1:6329-7879 > data/mtdna/SRR26358744-coi.fasta
+
+```
+Generate a PCA for sanity, then call SNPs.
+
+mafft to align
+
+iqtree -s new-coi.afasta -bb 10000 -m HKY+G --redo 
+
+
+```{r}
+tree<-read.tree("outputs/400/new-coi.afasta.contree")
+t2<-midpoint.root(tree)
+t3<-as.polytomy(t2, feature='node.label', fun=function(x) as.numeric(x) < 75)
+
+t<-t3
+
+t<-ggtree(t)
+
+t$data$Bootstrap<-as.numeric(t$data$label)
+
+d <- t$data
+d <- d[!d$isTip,]
+d$label <- as.numeric(d$label)
+d <- d[d$label >= 90,]
+
+e <- t$data
+e <- e[!e$isTip,]
+e$label <- as.numeric(e$label)
+e <- e[e$label < 90,]
+e <- e[e$label >= 75,]
+```
+
+
+```{r}
+m61<-read_csv("meta/61-Indo-split.csv")
+m61$Region<-factor(m61$Region, levels=c("Queensland","Northern Territory","Papua New Guinea",
+                                              "Indonesia-K","Indonesia-SJ","Indonesia-SU","Philippines",
+                                              "Vietnam","Cambodia","Thailand", "Bangladesh",
+                                              "India Eastern Coast","India Western Coast"))
+
+m61$Lineage<-factor(m61$Lineage, levels=c("AUS+NG","IND","SEA","japonicus"))
+```
+
+
+```{r}
+m2<-m61
+u<-t %<+% m2 + #bind_rows(m58, rm) +
+  geom_point(data=e,  fill="gray50", cex=3, alpha=1, pch=22) +
+  geom_point(data=d,  fill="black", cex=3, alpha=1, pch=22) +
+  geom_tippoint(aes(x=x+0.005,fill=Region, shape=Lineage), cex=3) +
+  geom_tiplab(aes(label=Region, x=x+0.01), align = FALSE, size=3) +
+  scale_shape_manual(values=c(21,23,24,25)) +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  xlim(0,.2) +
+  scale_fill_viridis_d(option="H") +
+  theme(legend.position = "none") +
+  geom_treescale()
+
+u
+
+ggsave("outputs/400/mtdna-phylo.pdf", width=6.5, height=8)
+
+```
++
+  #geom_text(data=t$data %>% filter(isTip==TRUE) %>% filter(label %in% Run), aes(label=label, x=x+0.01), size=3) +
+
+
+```
 
 ## L. japonicus test
 
-Generate a PCA for sanity, then call SNPs.
