--- a/403-japonicus.Rmd
+++ b/403-japonicus.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message=FALSE)
 library(phytools)
 library(tidyverse)
 library(ggtree)
+library(ggrepel)
 library(tanggle)
 library(phangorn)
 library(viridis)
@@ -47,13 +48,117 @@ m61 %>% select(Path) %>% write_tsv("bamlists/61.bamlist", col_names = FALSE)
 
 Generate PCA and GL file
 -rf genome/lates-lgs.txt 
+
+
 ```{sh, eval=FALSE}
 srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
--bam bamlists/61.bamlist -r NC_066833.1\
+-bam bamlists/61.bamlist -r NC_066833.1 \
 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
 -minInd 55 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
 -doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
 -out outputs/403/61-ibs-90 > outputs/403/61-ibs-90.out 2> outputs/403/61-ibs-90.err &
+
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/403/61-ibs-90.beagle.gz -K 2 -o outputs/403/61-K2 &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/403/61-ibs-90.beagle.gz -K 3 -o outputs/403/61-K3 &
+srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/403/61-ibs-90.beagle.gz -K 4 -o outputs/403/61-K4 &
+
 ```
 
+
+	-> Number of sites retained after filtering: 271672 
+
+
+
+```{r}
+meta<-m61
+meta$Region<-factor(meta$Region, levels=c("Queensland","Northern Territory","Papua New Guinea",
+                                              "Indonesia-K","Indonesia-SJ","Indonesia-SU","Philippines",
+                                              "Vietnam","Cambodia","Thailand", "Bangladesh",
+                                              "India Eastern Coast","India Western Coast",
+                                          "Japan"))
+
+m <- as.matrix(read.table("outputs/403/61-ibs-90.covMat"))
+eig <- eigen(m)
+var<-eig$values/sum(eig$values)
+cumvar<-cumsum(eig$values)/sum(eig$values)
+
+head(var)
+head(cumvar)
+```
+
+
+```{r}
+covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(meta)
+
+text12<-covs %>% select(Run, Region, V1, V2) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V2, fill=Region), pch=21, alpha=0.75) +
+  geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="turbo")
+```
+
+```{r}
+text13<-covs  %>% select(Run, Region, V1, V3) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V3))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V3, fill=Region), pch=21, alpha=0.75) +
+  geom_text_repel(data=text13, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC3", " ", round((100*var[3]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid = element_blank()) +
+  scale_fill_viridis_d(option="turbo")
+```
+
+
+## Calling SNPs
+
+```{sh, eval=FALSE}
+srun -t 72:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 24 \
+-minInd 55 -bam bamlists/61.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-rf genome/lates-lgs.txt -out outputs/403/snps-wgs  \
+-minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/403/snps-wgs.out 2> outputs/403/snps-wgs.err &
+
+```
+	-> Number of sites retained after filtering: 3327142 
+
+Creating a vcf
+
+```{sh, eval=FALSE}
+plink --tped snps-wgs.tped --tfam snps-wgs.tfam  --out plink-binary --recode --allow-extra-chr --noweb
+plink --ped plink-binary.ped --map plink-binary.map --recode vcf --allow-extra-chr -out plink
+bgzip plink.vcf 
+tabix plink.vcf.gz
+
+#renaming vcf
+bcftools reheader --samples bamlists/60-sample-names.txt -o outputs/401/renamed.vcf.gz outputs/401/plink.vcf.gz
+
+bcftools +prune -l 0.20 -w 10000 outputs/401/renamed.vcf.gz > outputs/401/pruned.vcf
+bcftools +prune -l 0.30 -w 10000 outputs/401/renamed.vcf.gz > outputs/401/pruned-03.vcf
+```
+
+
+
+## MTDNA
+
+(didnt' work well with japonicus with all the data, trying with 20x downsampled data too, work less well)
+
+samtools view -b data/split/DRR391968.sort.flt.bam NC_007439.1 > data/mtdna/DRR391968-mtdna.bam
+samtools index data/mtdna/DRR391968-mtdna.bam
+
+srun -p high --nodes=1 --mem=32G -t 00:30:00 /home/maccamp/proovread/bin/bam2cns --bam data/mtdna/DRR391968-mtdna.bam --ref genome/NC_007439.1.fasta --prefix data/mtdna/DRR391968-mtdna
+
+ ~/seqtk/seqtk seq -a -q20 -n N data/mtdna/DRR391968-mtdna.fq > data/mtdna/DRR391968-mtdna-q20.fasta
+samtools faidx data/mtdna/DRR391968-mtdna-q20.fasta NC_007439.1:6329-7879 > data/mtdna/DRR391968-coi.fasta
+
+
+~/seqtk/seqtk seq -a -q20 -n N data/mtdna/DRR391968-mtdna.fq 
