--- a/401.1-pcadapt.Rmd
+++ b/401.1-pcadapt.Rmd
@@ -125,6 +125,8 @@ a<-ggplotGrob(ggarrange(panela, blank))
 bc<-ggplotGrob(ggarrange(pcb, pcc, ncol=, widths=c(1,1.45)))
 ggarrange(a,bc, ncol=1, heights=c(.5,1))
 ggsave("outputs/401/pcadapt.jpeg", width=8*1.3, height=6*1.2)
+ggsave("outputs/401/Supplemental Figure S1.pdf", width=8*1.3, height=6*1.2)
+
 ```
 
 Examining 3 and 4 PCs
