--- a/401.3-sea.Rmd
+++ b/401.3-sea.Rmd
@@ -76,7 +76,7 @@ labels<-pcadata %>% group_by(Region) %>% mutate(x=mean(V1), y=mean(V2)) %>% sele
 pcb<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95) +
   geom_text_repel(data=labels, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
-  scale_shape_manual(values = c(22)) +
+  scale_shape_manual(values = c(24)) +
   scale_fill_manual(values=cols[4:11]) +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
@@ -96,7 +96,7 @@ labels13<-pcadata %>% group_by(Region) %>% mutate(x=mean(V1), y=mean(V3)) %>% se
 pcc<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V3, shape=Lineage, fill=Region), alpha=0.95) +
   geom_text_repel(data=labels13, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
-  scale_shape_manual(values = c(22)) +
+  scale_shape_manual(values = c(24)) +
   scale_fill_manual(values=cols[4:11]) +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
@@ -117,6 +117,7 @@ blank <- grid.rect(gp=gpar(col="white"))
 ```{r}
 ggarrange(ggarrange(panela,blank, ncol=1), pcb, pcc, ncol=3, widths = c(1,2,2.5))
 ggsave("outputs/401/pca-adapt-sea.jpeg", width=15, height=5.5)
+ggsave("outputs/401/Supplemental Figure S3.pdf", width=15, height=5.5)
 
 ```
 # Outliers
